--- a/assignment3_notebook.ipynb
+++ b/assignment3_notebook.ipynb
@@ -4,18 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignment 3 - Part 1: Character-Level Siamese Models\n",
-    "\n",
-    "This notebook implements the end-to-end pipeline for the Home Depot Search Relevance assignment.",
-    "It corresponds to the 5 steps outlined in the assignment pipeline."
+    "# Assignment 3: Home Depot Search Relevance\n",
+    "Character-level Siamese Models and Feature Extraction.\n",
+    "**Note:** Ensure you are using a Python 3.12 Kernel with GPU support."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1: Data Preprocessing & Tokenization\n",
-    "Handles data loading, cleaning, and character-level tokenization."
+    "## Step 1: Data Preprocessing\n",
+    "Generates character sequences and n-grams."
    ]
   },
   {
@@ -204,21 +203,21 @@
     "    joblib.dump(benchmark_data, os.path.join(DATA_DIR, 'benchmark_data.pkl'))\n",
     "    print(\"Benchmark data saved to 'benchmark_data.pkl'\")\n",
     "\n",
-    "# --- Main Execution ---\n",
-    "train_df, test_df = load_and_merge()\n",
-    "\n",
-    "prepare_dl_data(train_df, test_df)\n",
-    "prepare_benchmark_data(train_df, test_df)\n",
-    "\n",
-    "print(\"\\nPreprocessing Complete!\")"
+    "if __name__ == \"__main__\":\n",
+    "    train_df, test_df = load_and_merge()\n",
+    "    \n",
+    "    prepare_dl_data(train_df, test_df)\n",
+    "    prepare_benchmark_data(train_df, test_df)\n",
+    "    \n",
+    "    print(\"\\nPreprocessing Complete!\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2: Naive Benchmark Model\n",
-    "Trains a Ridge Regression model on character n-grams (2-4)."
+    "## Step 2: Naive Benchmark\n",
+    "Trains Ridge Regression on n-grams."
    ]
   },
   {
@@ -332,16 +331,16 @@
     "        round(val_mae, 4)\n",
     "    )\n",
     "\n",
-    "# --- Main Execution ---\n",
-    "run_benchmark()"
+    "if __name__ == \"__main__\":\n",
+    "    run_benchmark()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3: Siamese Char-CNN Training\n",
-    "Trains the Siamese Network with Character-level CNN encoders."
+    "## Step 3: Siamese Char-CNN\n",
+    "Trains the Siamese Network."
    ]
   },
   {
@@ -372,9 +371,11 @@
     "HIDDEN_DIM = 256\n",
     "LEARNING_RATE = 0.001\n",
     "\n",
+    "# --- Device Config ---\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
     "class CharDataset(Dataset):\n",
     "    def __init__(self, search, desc, labels=None):\n",
-    "        # We ensure they are the correct length and type for PyTorch\n",
     "        self.search = torch.tensor(search.astype(np.int64))\n",
     "        self.desc = torch.tensor(desc.astype(np.int64))\n",
     "        if labels is not None:\n",
@@ -409,6 +410,7 @@
     "        self.fc = nn.Linear(256, hidden_dim)\n",
     "\n",
     "    def forward(self, x):\n",
+    "        # x: (batch, seq_len) -> (batch, emb, seq_len)\n",
     "        x = self.embedding(x).transpose(1, 2) \n",
     "        x = self.convs(x).squeeze(-1) \n",
     "        x = self.fc(x)\n",
@@ -425,6 +427,7 @@
     "            nn.Dropout(0.2),\n",
     "            nn.Linear(128, 1)\n",
     "        )\n",
+    "        # Initialize bias to mean target value for faster convergence\n",
     "        with torch.no_grad():\n",
     "            self.fc[-1].bias.fill_(target_mean)\n",
     "\n",
@@ -451,7 +454,6 @@
     "                data['X_test_search'], data['X_test_desc'], vocab_size)\n",
     "\n",
     "def log_results(runtime, train_rmse, val_rmse, train_mae, val_mae):\n",
-    "    # Logs TRAIN/VAL results only.\n",
     "    res_df = pd.DataFrame([{\n",
     "        'Model type': 'Character level CNN (Siamese)',\n",
     "        'runtime': f\"{runtime:.2f} sec\",\n",
@@ -462,52 +464,137 @@
     "        'Val-MAE': f\"{val_mae:.4f}\",\n",
     "        'Test-MAE': \"N/A (See evaluate.py)\"\n",
     "    }])\n",
-    "    res_df.to_csv(RESULTS_FILE, mode='a', header=not os.path.exists(RESULTS_FILE), index=False)\n",
+    "    header = not os.path.exists(RESULTS_FILE)\n",
+    "    res_df.to_csv(RESULTS_FILE, mode='a', header=header, index=False)\n",
     "    print(f\"\\nTraining Results saved to {RESULTS_FILE}\")\n",
     "\n",
     "def main():\n",
-    "    # ... (existing device and loading code) ...\n",
-    "    # ...\n",
-    "    # After training loop:\n",
-    "    # Load best model for final Train/Val/Test evaluation\n",
-    "    print(\"\\nLoading best model for final evaluation...\")\n",
-    "    model.load_state_dict(torch.load(MODEL_SAVE_PATH))\n",
+    "    print(f\"Using device: {device}\")\n",
     "    \n",
+    "    # 1. Load Data\n",
+    "    X_s_tr, X_d_tr, y_tr, X_s_val, X_d_val, y_val, X_s_te, X_d_te, vocab_size = load_data()\n",
+    "    \n",
+    "    # 2. Setup\n",
+    "    model = SiameseCNN(vocab_size, EMBEDDING_DIM, HIDDEN_DIM).to(device)\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
+    "    criterion = nn.MSELoss()\n",
+    "    \n",
+    "    train_loader = DataLoader(CharDataset(X_s_tr, X_d_tr, y_tr), batch_size=BATCH_SIZE, shuffle=True)\n",
+    "    val_loader = DataLoader(CharDataset(X_s_val, X_d_val, y_val), batch_size=BATCH_SIZE)\n",
+    "    \n",
+    "    print(f\"Model initialized. Vocab size: {vocab_size}\")\n",
+    "    print(\"Starting training...\")\n",
+    "    \n",
+    "    # 3. Training Loop\n",
+    "    start_time = time.time()\n",
+    "    best_val_loss = float('inf')\n",
+    "    history = {'train_loss': [], 'val_loss': []}\n",
+    "    \n",
+    "    for epoch in range(EPOCHS):\n",
+    "        model.train()\n",
+    "        train_loss = 0.0\n",
+    "        \n",
+    "        for s, d, y in train_loader:\n",
+    "            s, d, y = s.to(device), d.to(device), y.to(device)\n",
+    "            \n",
+    "            optimizer.zero_grad()\n",
+    "            output = model(s, d)\n",
+    "            loss = criterion(output, y)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            \n",
+    "            train_loss += loss.item() * s.size(0)\n",
+    "        \n",
+    "        train_loss /= len(train_loader.dataset)\n",
+    "        \n",
+    "        # Validation\n",
+    "        model.eval()\n",
+    "        val_loss = 0.0\n",
+    "        with torch.no_grad():\n",
+    "            for s, d, y in val_loader:\n",
+    "                s, d, y = s.to(device), d.to(device), y.to(device)\n",
+    "                output = model(s, d)\n",
+    "                loss = criterion(output, y)\n",
+    "                val_loss += loss.item() * s.size(0)\n",
+    "        \n",
+    "        val_loss /= len(val_loader.dataset)\n",
+    "        \n",
+    "        history['train_loss'].append(train_loss)\n",
+    "        history['val_loss'].append(val_loss)\n",
+    "        \n",
+    "        print(f\"Epoch {epoch+1}/{EPOCHS} | Train Loss: {train_loss:.4f} | Val Loss: {val_loss:.4f}\")\n",
+    "        \n",
+    "        # Save Best Model\n",
+    "        if val_loss < best_val_loss:\n",
+    "            best_val_loss = val_loss\n",
+    "            torch.save(model.state_dict(), MODEL_SAVE_PATH)\n",
+    "            \n",
+    "    total_time = time.time() - start_time\n",
+    "    print(f\"Training completed in {total_time:.2f} seconds.\")\n",
+    "    print(f\"Best model saved to {MODEL_SAVE_PATH}\")\n",
+    "    \n",
+    "    # 4. Plot History\n",
+    "    plt.figure(figsize=(10, 5))\n",
+    "    plt.plot(history['train_loss'], label='Train Loss')\n",
+    "    plt.plot(history['val_loss'], label='Val Loss')\n",
+    "    plt.title('Siamese Network Training Loss')\n",
+    "    plt.xlabel('Epoch')\n",
+    "    plt.ylabel('MSE Loss')\n",
+    "    plt.legend()\n",
+    "    plt.savefig(PLOT_FILE)\n",
+    "    print(f\"Plot saved to {PLOT_FILE}\")\n",
+    "    \n",
+    "    # 5. Final Evaluation (Best Model)\n",
+    "    print(\"\\nLoading best model for final evaluation...\")\n",
+    "    model.load_state_dict(torch.load(MODEL_SAVE_PATH)) # ensure we use the best one\n",
     "    model.eval()\n",
+    "    \n",
     "    def get_metrics(loader):\n",
     "        preds, targets = [], []\n",
     "        with torch.no_grad():\n",
     "            for s, d, y in loader:\n",
-    "                s, d = s.to(device), d.to(device)\n",
+    "                s, d, y = s.to(device), d.to(device), y.to(device)\n",
     "                out = model(s, d)\n",
     "                preds.extend(out.cpu().numpy())\n",
     "                targets.extend(y.numpy())\n",
+    "        \n",
     "        preds = np.clip(preds, 1.0, 3.0)\n",
-    "        rmse = np.sqrt(np.mean((np.array(targets) - np.array(preds))**2))\n",
-    "        mae = np.mean(np.abs(np.array(targets) - np.array(preds)))\n",
+    "        rmse = np.sqrt(mean_squared_error(targets, preds))\n",
+    "        mae = mean_absolute_error(targets, preds)\n",
     "        return rmse, mae\n",
     "\n",
+    "    # Evaluate on Train/Val splits\n",
     "    tr_rmse, tr_mae = get_metrics(DataLoader(CharDataset(X_s_tr, X_d_tr, y_tr), batch_size=BATCH_SIZE))\n",
     "    val_rmse, val_mae = get_metrics(DataLoader(CharDataset(X_s_val, X_d_val, y_val), batch_size=BATCH_SIZE))\n",
-    "\n",
-    "    # Test Prediction\n",
+    "    \n",
+    "    # 6. Test Prediction\n",
+    "    print(\"Generating Test predictions...\")\n",
     "    test_loader = DataLoader(CharDataset(X_s_te, X_d_te, labels=None), batch_size=BATCH_SIZE)\n",
-    "    # ... (rest of the test pred logic) ...\n",
+    "    \n",
+    "    test_preds = []\n",
+    "    with torch.no_grad():\n",
+    "        for s, d in test_loader:\n",
+    "            s, d = s.to(device), d.to(device)\n",
+    "            out = model(s, d)\n",
+    "            test_preds.extend(out.cpu().numpy())\n",
+    "            \n",
+    "    test_preds = np.clip(test_preds, 1.0, 3.0)\n",
+    "    np.save(SUBMISSION_FILE, test_preds)\n",
+    "    print(f\"Test predictions saved to '{SUBMISSION_FILE}'\")\n",
     "    \n",
     "    # Log Results\n",
     "    log_results(total_time, tr_rmse, val_rmse, tr_mae, val_mae)\n",
     "\n",
-    "\n",
-    "# --- Main Execution ---\n",
-    "main()"
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 4: Feature Extraction & Machine Learning\n",
-    "Extracts embeddings from the trained CNN and trains XGBoost/Ridge models."
+    "## Step 4: Feature Extraction\n",
+    "Extracts embeddings + XGBoost/Ridge."
    ]
   },
   {
@@ -526,6 +613,7 @@
     "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
     "import os\n",
     "import time\n",
+    "import joblib\n",
     "\n",
     "# --- Configuration ---\n",
     "DATA_FILE = 'data/dl_data.npz'\n",
@@ -537,11 +625,15 @@
     "EMBEDDING_DIM = 64\n",
     "HIDDEN_DIM = 256\n",
     "\n",
+    "# --- Device Config ---\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
     "# --- Re-define Model Classes (Must match training) ---\n",
     "class CharCNNEncoder(nn.Module):\n",
     "    def __init__(self, vocab_size, emb_dim, hidden_dim):\n",
     "        super(CharCNNEncoder, self).__init__()\n",
     "        self.embedding = nn.Embedding(vocab_size, emb_dim, padding_idx=0)\n",
+    "        \n",
     "        self.convs = nn.Sequential(\n",
     "            nn.Conv1d(emb_dim, 128, kernel_size=7, padding=3),\n",
     "            nn.ReLU(),\n",
@@ -577,6 +669,18 @@
     "    def __len__(self): return len(self.search)\n",
     "    def __getitem__(self, idx): return self.search[idx], self.desc[idx]\n",
     "\n",
+    "def load_data():\n",
+    "    print(\"Loading data...\")\n",
+    "    if not os.path.exists(DATA_FILE):\n",
+    "        raise FileNotFoundError(f\"{DATA_FILE} not found. Please run step1_preprocess.py first.\")\n",
+    "        \n",
+    "    with np.load(DATA_FILE, allow_pickle=True) as data:\n",
+    "        char_to_int = data['char_to_int'].item()\n",
+    "        vocab_size = len(char_to_int) + 1\n",
+    "        return (data['X_train_search'], data['X_train_desc'], data['y_train'],\n",
+    "                data['X_val_search'], data['X_val_desc'], data['y_val'],\n",
+    "                data['X_test_search'], data['X_test_desc'], vocab_size)\n",
+    "\n",
     "def extract_features(model, loader, device):\n",
     "    model.eval()\n",
     "    feats = []\n",
@@ -589,11 +693,15 @@
     "            h2 = h2.cpu().numpy()\n",
     "            \n",
     "            # Create Interaction Features\n",
+    "            # 1. Absolute Difference\n",
     "            diff = np.abs(h1 - h2)\n",
+    "            # 2. Element-wise Product\n",
     "            prod = h1 * h2\n",
+    "            # 3. Cosine Similarity\n",
     "            cosine = np.sum(h1 * h2, axis=1, keepdims=True) / (\n",
     "                np.linalg.norm(h1, axis=1, keepdims=True) * np.linalg.norm(h2, axis=1, keepdims=True) + 1e-8\n",
     "            )\n",
+    "            # 4. Euclidean Distance\n",
     "            euclid = np.linalg.norm(h1 - h2, axis=1, keepdims=True)\n",
     "            \n",
     "            # Concatenate all\n",
@@ -614,12 +722,50 @@
     "        'Val-MAE': f\"{val_mae:.4f}\",\n",
     "        'Test-MAE': \"N/A (See evaluate.py)\"\n",
     "    }])\n",
-    "    res_df.to_csv(RESULTS_FILE, mode='a', header=not os.path.exists(RESULTS_FILE), index=False)\n",
+    "    header = not os.path.exists(RESULTS_FILE)\n",
+    "    res_df.to_csv(RESULTS_FILE, mode='a', header=header, index=False)\n",
     "\n",
     "def main():\n",
-    "    # ... (existing loading and feature extraction code) ...\n",
-    "\n",
-    "    # 4. Train Model 1: XGBoost on Char Features...\n",
+    "    print(f\"Using device: {device}\")\n",
+    "    \n",
+    "    # 1. Load Data\n",
+    "    X_s_tr, X_d_tr, y_train, X_s_val, X_d_val, y_val, X_s_te, X_d_te, vocab_size = load_data()\n",
+    "    \n",
+    "    # 2. Load Siamese Model\n",
+    "    if not os.path.exists(MODEL_PATH):\n",
+    "        raise FileNotFoundError(f\"{MODEL_PATH} not found. Run train_model.py first.\")\n",
+    "        \n",
+    "    print(f\"Loading Siamese model from {MODEL_PATH}...\")\n",
+    "    # Load state dict but filter out FC layers since we changed init args potentially, \n",
+    "    # or just use strict=False if architecture is identical. \n",
+    "    # Actually, the SiameseCNN class here matches the training one, so strict load works.\n",
+    "    siamese = SiameseCNN(vocab_size, EMBEDDING_DIM, HIDDEN_DIM).to(device)\n",
+    "    \n",
+    "    # Note: We need to load state_dict carefully. \n",
+    "    # The saved model has the full architecture including the final FC layers.\n",
+    "    # Our feature extractor definition here only has 'encoder'.\n",
+    "    # So we load the state dict and only keep keys starting with 'encoder'.\n",
+    "    state_dict = torch.load(MODEL_PATH, map_location=device)\n",
+    "    encoder_state_dict = {k: v for k, v in state_dict.items() if k.startswith('encoder')}\n",
+    "    siamese.load_state_dict(encoder_state_dict)\n",
+    "    \n",
+    "    # 3. Extract Features\n",
+    "    print(\"Extracting features (this may take a while)...\")\n",
+    "    \n",
+    "    train_loader = DataLoader(CharDataset(X_s_tr, X_d_tr), batch_size=BATCH_SIZE, shuffle=False)\n",
+    "    val_loader = DataLoader(CharDataset(X_s_val, X_d_val), batch_size=BATCH_SIZE, shuffle=False)\n",
+    "    test_loader = DataLoader(CharDataset(X_s_te, X_d_te), batch_size=BATCH_SIZE, shuffle=False)\n",
+    "    \n",
+    "    X_train_feats = extract_features(siamese, train_loader, device)\n",
+    "    print(f\"Train features shape: {X_train_feats.shape}\")\n",
+    "    \n",
+    "    X_val_feats = extract_features(siamese, val_loader, device)\n",
+    "    print(f\"Val features shape: {X_val_feats.shape}\")\n",
+    "    \n",
+    "    X_test_feats = extract_features(siamese, test_loader, device)\n",
+    "    print(f\"Test features shape: {X_test_feats.shape}\")\n",
+    "    \n",
+    "    # 4. Train Model 1: XGBoost on Char Features\n",
     "    print(\"\\nTraining Model 1: XGBoost on Char Features...\")\n",
     "    start = time.time()\n",
     "    xgb_model = xgb.XGBRegressor(\n",
@@ -645,9 +791,10 @@
     "    \n",
     "    # Save XGB Preds\n",
     "    te_pred = xgb_model.predict(X_test_feats)\n",
+    "    te_pred = np.clip(te_pred, 1.0, 3.0)\n",
     "    np.save(SUBMISSION_XGB, te_pred)\n",
     "    \n",
-    "    # 5. Train Model 2: Ridge on Char Features...\n",
+    "    # 5. Train Model 2: Ridge on Char Features\n",
     "    print(\"\\nTraining Model 2: Ridge on Char Features...\")\n",
     "    start = time.time()\n",
     "    ridge_model = Ridge(alpha=1.0)\n",
@@ -665,15 +812,15 @@
     "    print(f\"Ridge Results - Train RMSE: {tr_rmse:.4f}, Val RMSE: {val_rmse:.4f}\")\n",
     "    log_results(\"FE (Char) + Ridge\", rt, tr_rmse, val_rmse, tr_mae, val_mae)\n",
     "\n",
-    "    \n",
     "    # Save Ridge Preds\n",
     "    te_pred = ridge_model.predict(X_test_feats)\n",
+    "    te_pred = np.clip(te_pred, 1.0, 3.0)\n",
     "    np.save(SUBMISSION_RIDGE, te_pred)\n",
     "    \n",
     "    print(\"\\nDone with Char Feature Extraction!\")\n",
     "\n",
-    "# --- Main Execution ---\n",
-    "main()"
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   },
   {
@@ -681,7 +828,7 @@
    "metadata": {},
    "source": [
     "## Step 5: Final Evaluation\n",
-    "Evaluates all models against the solution file and generates the report."
+    "Evaluates all models against solution.csv."
    ]
   },
   {
@@ -841,28 +988,19 @@
     "\n",
     "    print(f\"\\nEvaluation Complete. Updated {RESULTS_FILE}.\")\n",
     "\n",
-    "# --- Main Execution ---\n",
-    "main()"
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12"
   }
  },
  "nbformat": 4,
